[package]
name = "kvm-test-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65" }
libc = { version = "0.2.133" }
[target.'cfg(unix)'.dependencies]
kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = { version = "0.11.0" }
